<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_calculator"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="13dp"/>

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_of_pax"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/buttonSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:checkable="false"
            android:checked="true"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/buttonGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:checkable="true"
            android:checked="true"
            android:text="@string/gst"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount_percent"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radioGroupPaymentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/radioButtonPaynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSplitBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTotalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewEachPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>


</LinearLayout>
